# worldcup-settlement

./: .gitignore  Anchor.toml  README.md  SUBMISSION.md  package.json
agent/: assessor.ts  logger.ts  loop.ts  model.ts  package-lock.json  package.json  test-stub.ts  traces.jsonl  trigger.ts  tsconfig.json  types.ts  verify.ts
client/: fixture.json  live-capture.ts  normalize.ts  package-lock.json  package.json  poll.ts  subscribe-fresh.ts  tsconfig.json  txline-client.ts  types.ts
dashboard/: DESIGN.md  package-lock.json  package.json
dashboard/data/: traces.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/lib/: traces.ts
docs/: C13-demo-shot-script.md  TXLINE-FEEDBACK.md  quality-gate-log.md
model/: README.md  metrics.json  model.joblib  model.json  predict_sample.py  requirements.txt  train.py
programs/worldcup-settlement/: Cargo.toml  build.rs
programs/worldcup-settlement/src/: constants.rs  errors.rs  lib.rs
programs/worldcup-settlement/src/instructions/: init_market.rs  mod.rs  open_position.rs  settle_from_proof.rs
programs/worldcup-settlement/src/market/: state.rs
programs/worldcup-settlement/src/position/: state.rs
programs/worldcup-settlement/src/proof/: mod.rs  plan_b.rs  verify.rs
programs/worldcup-settlement/tests/: settlement.rs
scripts/: refresh-dashboard.js
video/: VIDEO-SPEC.md  package-lock.json  package.json  tsconfig.json
video/src/: Composition.tsx  Root.tsx
