[package]
name = "worldcup-settlement"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "worldcup_settlement"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
# test-oracle: replaces PLAN_B_ORACLE_AUTHORITY with a fixed test keypair pubkey.
# Used when running `cargo test --features test-oracle` so integration tests can
# sign with a keypair whose private key is known.
test-oracle = []


[dependencies]
anchor-lang = "1.0.2"
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
litesvm = "0.10.0"
solana-account = "3.2.0"
solana-instruction = "3"
solana-message = "3.0.1"
solana-pubkey = "3"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
